login funcionando com o administrador

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
         </section>
     
         <article>
-          <a href="/views/pages/sobre.ejs"><input type="button" value="Sobre" id="btnLog"></a>
+          <a href="/sobre"><input type="button" value="Sobre" id="btnLog"></a>
         </article>
     
         <article>
