--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,31 +5,38 @@
 
 <body>
 
-    <%- include("../partials/menu"); %>
+  <%- include("../partials/menu"); %>
 
-    <main class="content">
+  <main class="content">
 
-      <div class="caixa-login">
+    <div class="caixa-login">
 
-        <h2>Faça seu Login</h2>
-        
-        <img src="/static/img/Log.jpg" alt="Usuário" class="avatar" />
-        
-        <form>
-          <label for="email">E-mail</label>
-          <input type="email" id="email" placeholder="Digite seu e-mail"  class="input-form" required/>
-  
-          <label for="senha">Senha</label>
-          <input type="password" id="senha" placeholder="Digite sua senha"  class="input-form" required />
-  
-          <button type="submit">Entrar</button>
-        </form>
-        
-      </div>
+      <h2>Faça seu Login</h2>
 
-    </main>
+      <img src="/static/img/Log.jpg" alt="Usuário" class="avatar" />
 
-    <%- include("../partials/footer"); %> 
+      <form action="/login" method="POST">
+
+        <label for="username">Nome</label>
+        <input type="text" id="username" name="username" placeholder="Digite seu Nome" class="input-form" required />
+
+        <label for="password">Senha</label>
+        <input type="password" id="password" name="password" placeholder="Digite sua senha" class="input-form" required />
+
+        <button type="submit">Entrar</button>
+
+      </form>
+
+      <% if (erro) { %>
+        <p class="error" style="color: red; margin-top: 10px;"><%= erro %></p>
+      <% } %>
+
+    </div>
+
+  </main>
+
+  <%- include("../partials/footer"); %>
 
 </body>
+
 </html>
