--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -9,19 +9,20 @@
         </a>
 
         <ul class="nav-links">
-            <li><a href="/"><input type="button" value="Home" id=""></a></li>
-            <li><a href="/sobre"><input type="button" value="Sobre" id=""></a></li>
-            <li><a href="/localizacao"><input type="button" value="Localizacao" id=""></a></li>
-            <li><a href="/equipe"><input type="button" value="Equipe" id=""></a></li>
-            <li><a href="/doacoes_doar"><input type="button" value="Doações/Doar" id=""></a></li>
-            <% if(!req.session.loggedin) { %>
-                <li><a href="/login"><input type="button" value="Login" id=""></a></li>
-            <% } else { %>
-                <li><a href="/logout"><input type="button" value="logout" id=""></a></li>
-                <li><a href="/dashboard"><input type="button" value="Dashboard"></a></li>
-                <li><a href="/post_create"><input type="button" value="Postagem"></a></li>
-            <% } %>
-        </ul>
+    <li><a href="/"><input type="button" value="Home"></a></li>
+    <li><a href="/sobre"><input type="button" value="Sobre"></a></li>
+    <li><a href="/localizacao"><input type="button" value="Localização"></a></li>
+    <li><a href="/equipe"><input type="button" value="Equipe"></a></li>
+    <li><a href="/doacoes_doar"><input type="button" value="Doações/Doar"></a></li>
+
+    <% if (!req.session.user) { %>
+        <li><a href="/login"><input type="button" value="Login"></a></li>
+    <% } else { %>
+        <li><a href="/logout"><input type="button" value="Logout"></a></li>
+       
+    <% } %>
+</ul>
+
     </nav>
     
 </header>
