--- a/views/pages/doacoes_doar.ejs
+++ b/views/pages/doacoes_doar.ejs
@@ -13,13 +13,13 @@
           <h4>ESCOLHA</h4>
           
           <article>
-            <a href="doar.html"> <img src="../static/Img/doar.jpg" alt="Doações" id="img-j"> </a>
+            <a href="/tabela"> <img src="../static/Img/doar.jpg" alt="Doações" id="img-j"> </a>
             
           <h3>Exibir Tabela de Doações</h3>
           </article>
           
           <article>
-           <a href="doações.html"> <img src="../static/Img/tabela.png" alt="Doar" id="img-j"> </a>
+           <a href="/realizardoacao"> <img src="../static/Img/tabela.png" alt="Doar" id="img-j"> </a>
 
           <h3>Página para Doar<h3>
           </article>
