Trabalho Concluído - Arthur 17/06

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar">
 
-        <a href="/pages/Index.html">
+        <a href="/">
             <div class="titulo-container">
               <img src="../static/Img/Logo.png" alt="Logo Da Campanha" id="logoimg">
               <div class="tit">Campanha</div>
