--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,13 +5,20 @@
 
 <body>
 
+  <video controls autoplay muted loop id="bg-video">
+    <source src="https://cdn.pixabay.com/video/2023/11/28/191159-889246512_small.mp4" type="video/mp4"> 
+    Seu navegador não suporta vídeo.
+  </video>
+  
+
     <%- include("../partials/menu"); %>
 
     <main class="content">
     
         <section class="sobre">
           <h1>AJUDE <span class="letra">QUEM</span> PUDER</h1>
-          <h2>O que não te serve mais, pode ser o acolhimento do próximo </h2>
+          <h2>O Que Não te Serve Mais, Pode Ser o Acolhimento do Próximo ! </h2>
+          <h2>O frio passa. A Solidariedade Aquece Para Sempre.</h2>
         </section>
     
         <article>
