--- a/views/pages/realizardoacao.ejs
+++ b/views/pages/realizardoacao.ejs
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+
 <%- include("../partials/head"); %>
 <%- include("../partials/menu"); %>
+
+<body>
 
 <div class="doacao-container">
   <h1>Realizar Doação</h1>
@@ -38,3 +43,8 @@
     <button type="submit">Doar</button>
   </form>
 </div>
+
+<%- include("../partials/footer"); %> 
+
+</body>
+</html>
