--- a/views/pages/tabela.ejs
+++ b/views/pages/tabela.ejs
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+
 <%- include("../partials/head"); %>
 <%- include("../partials/menu"); %>
+
+<body>
 
 <div class="tabela-container">
   <h1>Tabela de Doações</h1>
@@ -29,3 +34,8 @@
     </tbody>
   </table>
 </div>
+
+<%- include("../partials/footer"); %> 
+
+</body>
+</html>
