--- a/views/pages/doacoes_doar.ejs
+++ b/views/pages/doacoes_doar.ejs
@@ -8,24 +8,23 @@
     <%- include("../partials/menu"); %>
 
     <main>
-        <section class="doar">
 
-          <h4>ESCOLHA</h4>
+      <h4>ESCOLHA</h4>
+      
+      <section class="doar">
           
-          <article>
-            <a href="/tabela"> <img src="../static/Img/doar.jpg" alt="Doações" id="img-j"> </a>
-            
+        <article>
+          <a href="/tabela"> <img src="../static/Img/tabela.png" alt="Doações" id="img-j"> </a>
           <h3>Exibir Tabela de Doações</h3>
-          </article>
+        </article>
           
-          <article>
-           <a href="/realizardoacao"> <img src="../static/Img/tabela.png" alt="Doar" id="img-j"> </a>
-
+        <article>
+          <a href="/realizardoacao"> <img src="../static/Img/doar.jpg" alt="Doar" id="img-j"> </a>
           <h3>Página para Doar<h3>
-          </article>
+        </article>
 
-        </section>
-      </main>
+      </section>
+    </main>
 
     <%- include("../partials/footer"); %> 
     
