--- a/views/pages/tabela.ejs
+++ b/views/pages/tabela.ejs
@@ -33,6 +33,12 @@
       <% }) %>
     </tbody>
   </table>
+
+</div>
+
+<div class="voltar">
+  <a href="/doacoes_doar"><img src="https://cdn-icons-png.flaticon.com/512/5935/5935366.png" 
+    alt="Voltar" id="img-v"></a>
 </div>
 
 <%- include("../partials/footer"); %> 
