--- a/views/pages/realizardoacao.ejs
+++ b/views/pages/realizardoacao.ejs
@@ -2,47 +2,49 @@
 <html lang="pt-br">
 
 <%- include("../partials/head"); %>
-<%- include("../partials/menu"); %>
 
 <body>
 
-<div class="doacao-container">
-  <h1>Realizar Doação</h1>
+  <%- include("../partials/menu"); %>
 
-  <form action="/realizardoacao" method="POST">
-    <label for="turma">Turma:</label>
-    <select name="turma" required>
-      <% turmas.forEach(turma => { %>
-        <option value="<%= turma.sigla %>">
-          <%= turma.sigla %> - <%= turma.docente %>
-        </option>
-      <% }) %>
-    </select>
+  <div class="doacao-container">
+    <h1>Realizar Doação</h1>
 
-    <label for="item">Item:</label>
-    <select name="item" id="item" required>
-      <option value="" disabled selected>Selecione o item</option>
-      <% roupas.forEach((roupa) => { %>
-        <option value="<%= roupa.descricao %>">
-          <%= roupa.descricao %> - <%= roupa.pontos %> ponto(s)
-        </option>
-      <% }); %>
-    </select>
+    <form action="/realizardoacao" method="POST">
 
-    <label for="quantidade">Quantidade:</label>
-    <input
-      type="number"
-      id="quantidade"
-      name="quantidade"
-      min="1"
-      max="50"
-      value="<%= Math.floor(Math.random() * 50) + 1 %>"
-      required
-    >
+      <label for="turma">Turma:</label>
 
-    <button type="submit">Doar</button>
-  </form>
-</div>
+      <select name="turma" required>
+        <% turmas.forEach(turma => { %>
+          <option value="<%= turma.sigla %>">
+            <%= turma.sigla %> - <%= turma.docente %>
+          </option>
+        <% }) %>
+      </select>
+
+      <label for="item">Item:</label>
+
+      <select name="item" id="item" required>
+        <option value="" disabled selected>Selecione o item</option>
+        <% roupas.forEach((roupa) => { %>
+          <option value="<%= roupa.descricao %>">
+            <%= roupa.descricao %> - <%= roupa.pontos %> ponto(s)
+          </option>
+        <% }); %>
+      </select>
+
+      <label for="quantidade">Quantidade:</label>
+      <input type="number" id="quantidade" name="quantidade" min="1" max="99" 
+        value="<%= Math.floor(Math.random() * 99) + 1 %>"required> <!--Genial - Quantidade Mínima-->
+
+      <button type="submit">Doar</button>
+    </form>
+  </div>
+
+  <div class="voltar">
+    <a href="/doacoes_doar"><img src="https://cdn-icons-png.flaticon.com/512/5935/5935366.png" 
+      alt="Voltar" id="img-v"></a>
+  </div>
 
 <%- include("../partials/footer"); %> 
 
