--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -23,8 +23,10 @@
         <label for="password">Senha</label>
         <input type="password" id="password" name="password" placeholder="Digite sua senha" class="input-form" required />
 
-        <button type="submit">Entrar</button>
-
+        <div class="fancy">
+          <button type="submit">Entrar</button>
+        </div>
+        
       </form>
 
       <% if (erro) { %>
