--- a/views/pages/ranking.ejs
+++ b/views/pages/ranking.ejs
@@ -6,10 +6,10 @@
 
 <body>
 
-  <div class="ranking-container">
-    <h1>Ranking de Doações por Turma</h1>
+  <div class="tabela-container">
+    <h1>Ranking De Doações</h1>
 
-    <table class="tabela-ranking">
+    <table class="tabela-doacoes">
       <thead>
         <tr>
           <th>Posição</th>
@@ -30,11 +30,12 @@
       </tbody>
     </table>
 
-    <div class="voltar">
-      <a href="/tabela">
-        <img src="https://cdn-icons-png.flaticon.com/512/5935/5935366.png" alt="Voltar" id="img-v">
-      </a>
-    </div>
+  </div>
+  
+  <div class="voltar">
+    <a href="/tabela">
+      <img src="https://cdn-icons-png.flaticon.com/512/5935/5935366.png" alt="Voltar" id="img-v">
+    </a>
   </div>
 
   <%- include("../partials/footer"); %>
