Finalizado de  Verdade 13:46 - 18/06

--- a/static/styles.css
+++ b/static/styles.css
@@ -618,6 +618,11 @@ button:hover {
   text-decoration: underline;
 }
 
+#turma{
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
 /*MEDIA QUERY (RESPONSIVIDADES)*/
 
 /* ========== RESPONSIVIDADE ========== */
