--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,7 @@
 
   <main class="content">
 
-    <div class="caixa-login">
+    <div class="caixa-login" id="caixa-login">
 
       <h2>Faça seu Login</h2>
 
