--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/styles.css">
     <link rel="icon" href="/static/img/Logo.png" type="image/png">
+    <script src="/static/script.js"></script>
     <title><%= título %></title>
     
 </head>
