--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,33 +1,40 @@
 <header>
-    <nav class="navbar">
+  <nav class="navbar">
+    <a href="/">
+      <div class="titulo-container">
+        <img src="../static/Img/Logo.png" alt="Logo Da Campanha" id="logoimg" />
+        <div class="tit">Campanha</div>
+      </div>
+    </a>
 
-        <a href="/">
-            <div class="titulo-container">
-              <img src="../static/Img/Logo.png" alt="Logo Da Campanha" id="logoimg">
-              <div class="tit">Campanha</div>
-            </div>
+    <!-- Botão do menu hamburguer (mobile) -->
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+
+    <ul class="nav-links" id="navLinks">
+      <li><a href="/"><input type="button" value="Home" /></a></li>
+      <li><a href="/sobre"><input type="button" value="Sobre" /></a></li>
+      <li><a href="/localizacao"><input type="button" value="Localização" /></a></li>
+      <li><a href="/equipe"><input type="button" value="Equipe" /></a></li>
+      <li>
+        <a href="/doacoes_doar">
+          <input type="button" 
+            <% if (!req.session.user) { %>
+              value="Doações"
+            <% } else { %>
+              value="Doações/Doar"
+            <% } %>
+          />
         </a>
-
-    <ul class="nav-links">
-        <li><a href="/"><input type="button" value="Home"></a></li>
-        <li><a href="/sobre"><input type="button" value="Sobre"></a></li>
-        <li><a href="/localizacao"><input type="button" value="Localização"></a></li>
-        <li><a href="/equipe"><input type="button" value="Equipe"></a></li>
-        <li><a href="/doacoes_doar"><input type="button" <% if (!req.session.user){ %> 
-            value="Doações"
-        <% } else { %>
-            value="Doações/Doar"
-        <% } %> >
-        </a></li>
-
-        <% if (!req.session.user) { %>
-            <li><a href="/login"><input type="button" value="Login"></a></li>
-        <% } else { %>
-            <li><a href="/logout"><input type="button" value="Logout"></a></li>
-        <% } %>
-
+      </li>
+      <% if (!req.session.user) { %>
+        <li><a href="/login"><input type="button" value="Login" /></a></li>
+      <% } else { %>
+        <li><a href="/logout"><input type="button" value="Logout" /></a></li>
+      <% } %>
     </ul>
-
-    </nav>
-    
+  </nav>
 </header>
