--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   
-  background: linear-gradient(135deg,rgba(8, 1, 77, 1) 0%, rgba(1, 0, 26, 1) 100%);
+  /*background: linear-gradient(135deg,rgba(8, 1, 77, 1) 0%, rgba(1, 0, 26, 1) 100%);*/
   
   display: flex;
   flex-direction: column;
