--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -21,7 +21,7 @@
         <input type="text" id="username" name="username" placeholder="Digite seu Nome" class="input-form" required />
 
         <label for="password">Senha</label>
-        <input type="password" id="password" name="password" placeholder="Digite sua senha" class="input-form" required />
+        <input type="password" id="password" name="password" placeholder="Digite sua Senha" class="input-form" required />
 
         <div class="fancy">
           <button type="submit">Entrar</button>
