--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -15,10 +15,9 @@
     </div>
 
     <ul class="nav-links" id="navLinks">
-      <li><a href="/"><input type="button" value="Home" /></a></li>
+      <li><a href="/">HOME</a></li>
       <li><a href="/sobre"><input type="button" value="Sobre" /></a></li>
       <li><a href="/localizacao"><input type="button" value="Localização" /></a></li>
-      <li><a href="/equipe"><input type="button" value="Equipe" /></a></li>
       <li>
         <a href="/doacoes_doar">
           <input type="button" 
